--- a/.github/workflows/fclean.yaml
+++ b/.github/workflows/fclean.yaml
@@ -17,3 +17,5 @@ jobs:
     - name: Find Makefiles and clean
       run: |
         find . -name Makefile -execdir make fclean \;
+    - name: Generate ctags
+      run: ctags -R -f .tags
