--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
 	"files.associations": {
-		"mlx.h": "c"
+		"mlx.h": "c",
+		"math.h": "c",
+		"libc-header-start.h": "c",
+		"fcntl.h": "c"
 	}
 }
