--- a/.github/workflows/norminette.yaml
+++ b/.github/workflows/norminette.yaml
@@ -1,4 +1,4 @@
-name: <workflow-name>
+name: norminette
 on: [push]
 jobs:
   norminette:
@@ -7,4 +7,4 @@ jobs:
       - uses: actions/checkout@v2
       - uses: hanshazairi/42-norminette-action@v1.1.0
         with:
-          flags: 'exclude-dir: minilibx'
+          flags: '[exclude-dir] minilibx'
