--- a/.github/workflows/norminette.yaml
+++ b/.github/workflows/norminette.yaml
@@ -5,6 +5,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Use Node.js 20
+        uses: actions/setup-node@v2
+        with:
+          node-version: 20
       - uses: hanshazairi/42-norminette-action@v1.1.0
         with:
           exclude-dir: "./minilibx"
