--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,5 +1,29 @@
 {
 	"configurations": [
+		{
+			"name": "bonus",
+			"type": "cppdbg",
+			"request": "launch",
+			"program": "${workspaceFolder}/cub3D_bonus",
+			"args": ["maps/test.cub"],
+			"stopAtEntry": false,
+			"cwd": ".",
+			"environment": [],
+			"externalConsole": false,
+			"MIMode": "gdb",
+			"setupCommands": [
+				{
+					"description": "Enable pretty-printing for gdb",
+					"text": "-enable-pretty-printing",
+					"ignoreFailures": true
+				},
+				{
+					"description": "Set Disassembly Flavor to Intel",
+					"text": "-gdb-set disassembly-flavor intel",
+					"ignoreFailures": true
+				}
+			]
+		},
 	{
 		"name": "Basic C Launch",
 		"type": "cppdbg",
